--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
-    "express": "4.17.1",
+    "express": "^4.18.2",
     "joi": "^17.6.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.5",
     "morgan": "1.10.0",
+    "ping": "^0.4.2",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
