--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.6.5",
     "morgan": "1.10.0",
     "ping": "^0.4.2",
+    "request": "^2.88.2",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
