--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/ping": "^0.4.1",
+    "@types/request-promise": "^4.1.48",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
@@ -22,6 +23,8 @@
     "morgan": "1.10.0",
     "ping": "^0.4.2",
     "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "response-time": "^2.3.2",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
